line lowercase added

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Conceptual Sessions</title>
 </head>
 <body>
-    <h1>I am Web <span id="added">Developer</span></h1>
+    <h1>I am web <span id="added">developer</span></h1>
     <p>It's my personal project</p>
 </body>
 </html>
