--- a/index.html
+++ b/index.html
@@ -1,15 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="https://img.icons8.com/?size=48&id=20909&format=png" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"             rel="stylesheet">
     <link rel="stylesheet" href="styles/style.css">
     <title>Conceptual Sessions</title>
 </head>
+
 <body>
-    <h1>I am web <span id="added">developer</span></h1>
-    <h3>I am your teacher</h3>
-    <p>It's my personal project</p>
+    <div class="background">
+        <h1>I am web <span id="added">developer</span></h1>
+        <h3>I am your teacher</h3>
+        <p>It's my personal project</p>
+        <div class="btn">
+            <button id="text">Hire me Now</button>
+        </div>
+    </div>
 </body>
+
 </html>
